modify file name

--- a/15.logistic_regression.ipynb
+++ b/15.logistic_regression.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "0MRC0e0KhQ0S"
-   },
-   "source": [
-    "# Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "LWd1UlMnhT2s"
    },
    "source": [
@@ -90,16 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$y = w_1*x_1 + w_2*x_2  + b$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "YvxIPVyMhmKp"
-   },
-   "source": [
+    "$y = w_1*x_1 + w_2*x_2  + b$\n",
+    "\n",
     "## Splitting the dataset into the Training set and Test set"
    ]
   },
@@ -128,23 +110,10 @@
     "\n",
     "$z = \\frac{(x - u)}{s}$\n",
     "\n",
-    "where $u$ is the mean of the training samples and $s$ is the standard deviation of the training samples."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kW3c7UYih0hT"
-   },
-   "source": [
-    "## Feature Scaling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "where $u$ is the mean of the training samples and $s$ is the standard deviation of the training samples.\n",
+    "\n",
+    "## Feature Scaling\n",
+    "\n",
     "-- before scaling"
    ]
   },
