--- a/19.decision_tree.ipynb
+++ b/19.decision_tree.ipynb
@@ -4,28 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Decision Tree 를 활용한 Classification 을 수행해 보겠습니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Decision Tree\n",
+    "\n",
+    "Decision Tree 를 활용한 Classification 을 수행해 보겠습니다.\n",
+    "\n",
     "이 노트북에 사용된 데이터와 구현체는 아래 링크의 내용을 참고하였음을 밝힙니다. \n",
-    "https://www.datacamp.com/community/tutorials/decision-tree-classification-python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "https://www.datacamp.com/community/tutorials/decision-tree-classification-python\n",
+    "\n",
     "### 필요 환경 구축"
    ]
   },
@@ -485,7 +470,11 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -510,13 +499,6 @@
     "print(\"Predicted : \", y_pred[:10].tolist())\n",
     "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
